[package]
name = "winit-smoke"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
dpi = "0.1.2"
pollster = "0.4"
raw-window-handle = { version = "0.6.2", features = ["std"] }
wgpu = "27"
winit-core = "0.31.0-beta.2"
tgui-winit-ohos = { path = "../../../winit-ohos" }


[package.metadata.ohos-app.default]
deveco_studio_dir = "D:\\Apps\\code\\DevEco Studio"
ohpm_path = "D:\\Apps\\code\\DevEco Studio\\tools\\ohpm\\bin\\ohpm.bat"
sdk_root = "C:\\Users\\25422\\AppData\\Local\\OpenHarmony\\Sdk"
app_name = "winit-smoke"
bundle_name = "com.sctianji.winitSmoke"
module_name = "entry"
target = "x86_64"
output_dir = "ohos-app"
